<resources>
    <string name="app_name">Udacity Downloader</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="channel_name">Downloader</string>
    <string name="channel_description">Show notification about downloaded files</string>


    <string name="notification_title1">BumpTech</string>
    <string name="notification_title2">Udacity: Android Kotlin Nanodegree</string>
    <string name="notification_title3">Retrofit</string>
    <string name="notification_description1">Glide is downloaded</string>
    <string name="notification_description2">The Project 3 repository is downloaded</string>
    <string name="notification_description3">Retrofit downloaded</string>
    <string name="notification_button">Check the status</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="opt1">Glide - Image Loading Library by BumpTech</string>
    <string name="opt2">LoadApp - Current repository byh Udacity</string>
    <string name="opt3">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="download">Download</string>
    <string name="select">Please select the file to download</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>


</resources>
