<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivTop"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/bg_top"
        android:src="@drawable/ic_download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivTop">

        <RadioButton
            android:id="@+id/opt1"
            style="@style/MainRadioButton"
            android:text="@string/opt1" />

        <RadioButton
            android:id="@+id/opt2"
            style="@style/MainRadioButton"
            android:text="@string/opt2" />

        <RadioButton
            android:id="@+id/opt3"
            style="@style/MainRadioButton"
            android:text="@string/opt3" />
    </RadioGroup>


    <com.udacity.views.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:bgColor="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:text="@string/download"
        app:textColor="#FFFFFF" />


</androidx.constraintlayout.widget.ConstraintLayout>